<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_power"
			android:title="@string/home"/>
		<item
			android:id="@+id/nav_server"
			android:icon="@drawable/ic_server"
			android:title="@string/section_server"/>
		<item
			android:id="@+id/nav_dns"
			android:icon="@drawable/ic_dns"
			android:title="@string/section_dns"/>
		<item
			android:id="@+id/nav_routing"
			android:icon="@drawable/ic_routing"
			android:title="@string/section_routing"/>
		<item
			android:id="@+id/nav_apps"
			android:icon="@drawable/ic_apps"
			android:title="@string/apps"/>
		<item
			android:id="@+id/nav_rules"
			android:icon="@drawable/ic_rules"
			android:title="@string/rules"/>
		<item
			android:id="@+id/nav_conn"
			android:icon="@drawable/ic_connections"
			android:title="@string/connections"/>
		<item
			android:id="@+id/nav_log"
			android:icon="@drawable/ic_log"
			android:title="@string/log"/>
	</group>
	<item
		android:id="@+id/nav_theme"
		android:icon="@drawable/ic_palette"
		android:title="@string/theme"/>
</menu>
